// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagList > hide items after maxLength 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              provider
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              database
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_41_"
          aria-describedby="_r_41_"
          class="styles__pjfil59"
          tabindex="-1"
        >
          <button
            class="styles__hcrgu46"
            data-testid="taglist-open"
            type="button"
          >
            +2
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="cloud"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cloud
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="provider"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                provider
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="database"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                database
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +2
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_8_"
          aria-describedby="_r_8_"
          class="styles__pjfil59"
          tabindex="-1"
        >
          <button
            class="styles__hcrgu46"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              very
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              item
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_8j_"
          aria-describedby="_r_8j_"
          class="styles__pjfil59"
          tabindex="-1"
        >
          <button
            class="styles__hcrgu46"
            data-testid="taglist-open"
            type="button"
          >
            +50
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="very"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                very
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="item"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="item"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="item"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="item"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_code__1yhcak8v style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                item
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +50
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway is the best cloud provider ever invented
            </span>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway is the best cloud provider ever invented"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway is the best cloud provider ever invented
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_27_"
          aria-describedby="_r_27_"
          class="styles__pjfil59"
          tabindex="-1"
        >
          <button
            class="styles__hcrgu46"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="cloud"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly when maxLength is smaller than first tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles__1u0cyic5"
        >
          <div
            class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <button
              class="styles__hcrgu45 styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
              data-testid=""
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </button>
          </div>
        </div>
        <div
          class="styles__1u0cyic5"
        >
          <div
            class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <button
              class="styles__hcrgu45 styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
              data-testid=""
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles__1u0cyic5"
          >
            <div
              class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
              style="--_1o893js0: fit-content; --_1o893js1: 100%;"
            >
              <button
                class="styles__hcrgu45 styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
                data-testid="scaleway"
              >
                <span
                  class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
                >
                  scaleway
                </span>
              </button>
            </div>
          </div>
          <div
            class="styles__1u0cyic5"
          >
            <div
              class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
              style="--_1o893js0: fit-content; --_1o893js1: 100%;"
            >
              <button
                class="styles__hcrgu45 styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
                data-testid="cloud"
              >
                <span
                  class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
                >
                  cloud
                </span>
              </button>
            </div>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="cloud"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_1m_"
          aria-describedby="_r_1m_"
          class="styles__pjfil59"
          tabindex="-1"
        >
          <button
            class="styles__hcrgu46"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="cloud"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_2o_"
          aria-describedby="_r_2o_"
          class="styles__pjfil59"
          tabindex="-1"
        >
          <button
            class="styles__hcrgu46"
            data-testid="taglist-open"
            type="button"
          >
            +2
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +2
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with icons 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles__1u0cyic5"
        >
          <div
            class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <button
              class="styles__hcrgu45 styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
              data-testid=""
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </button>
          </div>
        </div>
        <div
          class="styles__1u0cyic5"
        >
          <div
            class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <button
              class="styles__hcrgu45 styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
              data-testid=""
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles__1u0cyic5"
          >
            <div
              class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
              style="--_1o893js0: fit-content; --_1o893js1: 100%;"
            >
              <button
                class="styles__hcrgu45 styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
                data-testid="scaleway"
              >
                <span
                  class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
                >
                  scaleway
                </span>
              </button>
            </div>
          </div>
          <div
            class="styles__1u0cyic5"
          >
            <div
              class="styles_copiable__x6xm4t1 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
              style="--_1o893js0: fit-content; --_1o893js1: 100%;"
            >
              <button
                class="styles__hcrgu45 styles_copiable__x6xm4t4 styles__x6xm4t6 styles_copiable_true__x6xm4t7 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti styles_undefined_compound_2__x6xm4tl"
                data-testid="cloud"
              >
                <span
                  class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
                >
                  cloud
                </span>
              </button>
            </div>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43 styles_multiline_true__hcrgu44"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_4i_"
          aria-describedby="_r_4i_"
          class="styles__pjfil59"
          tabindex="-1"
        >
          <button
            class="styles__hcrgu46"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43 styles_multiline_true__hcrgu44"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="cloud"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            />
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        />
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with placement 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__hcrgu41"
      data-testid="taglist"
    >
      <div
        class="styles__hcrgu43"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          style="--_1o893js0: fit-content; --_1o893js1: 100%;"
        >
          <span
            class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
            data-testid=""
          >
            <span
              class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_l_"
          aria-describedby="_r_l_"
          class="styles__pjfil59"
          tabindex="-1"
        >
          <button
            class="styles__hcrgu46"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__hcrgu42"
      >
        <div
          class="styles__hcrgu43"
        >
          <div
            class="styles_notCopiable__x6xm4t2 styles__x6xm4t0 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
            style="--_1o893js0: fit-content; --_1o893js1: 100%;"
          >
            <span
              class="styles__hcrgu45 styles_notCopiable__x6xm4t5 styles__x6xm4t6 styles_sentiment_neutral__x6xm4tc styles_isButton_false__x6xm4ti"
              data-testid="scaleway"
            >
              <span
                class="styles__x6xm4t14 style__1yhcak80 style_oneLine_true__1yhcak83 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832 style__1yhcak83e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__hcrgu46"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
